--- a/WinAPI_Game/WinAPI_Game.vcxproj
+++ b/WinAPI_Game/WinAPI_Game.vcxproj
@@ -141,6 +141,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="Connection.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scope.h" />
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="Connection.cpp" />
     <ClCompile Include="Scope.cpp" />
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="WinAPI_Game.cpp" />
