--- a/WinAPI_Game/WinAPI_Game.vcxproj
+++ b/WinAPI_Game/WinAPI_Game.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Connection.h" />
+    <ClInclude Include="Converter.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scope.h" />
@@ -152,6 +153,7 @@
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Connection.cpp" />
+    <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Scope.cpp" />
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="WinAPI_Game.cpp" />
