--- a/WinAPI_Game/WinAPI_Game.vcxproj
+++ b/WinAPI_Game/WinAPI_Game.vcxproj
@@ -146,8 +146,11 @@
     <ClInclude Include="Converter.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Logger.h" />
+    <ClInclude Include="MyDefines.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scope.h" />
+    <ClInclude Include="SoundController.h" />
+    <ClInclude Include="SoundEngine.h" />
     <ClInclude Include="Target.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WinAPI_Game.h" />
@@ -158,6 +161,8 @@
     <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Scope.cpp" />
+    <ClCompile Include="SoundController.cpp" />
+    <ClCompile Include="SoundEngine.cpp" />
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="WinAPI_Game.cpp" />
   </ItemGroup>
@@ -171,6 +176,12 @@
     <Image Include="scope.png" />
     <Image Include="small.ico" />
     <Image Include="WinAPI_Game.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\..\..\..\Downloads\gamemusic.wav" />
+    <Media Include="..\..\..\..\Downloads\intarget.wav" />
+    <Media Include="..\..\..\..\Downloads\outsidetarget.wav" />
+    <Media Include="..\..\..\..\Downloads\outsidetarget2.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
